force-app/main/default/objects/KCPQ_Pricing_Library__c/KCPQ_Pricing_Library__c.object-meta.xml
<CustomObject>
    <label>Pricing Library</label>
    <nameField>
        <label>Pricing Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>