force-app/main/default/objects/KCPQ_Pricing_Library__c/fields/KCPQ_Distributor_Net__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Distributor_Net__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Net</label>
    <type>Checkbox</type>
</CustomField>