force-app/main/default/objects/KCPQ_Pricing_Library__c/fields/KCPQ_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>