force-app/main/default/objects/KCPQ_Pricing_Library__c/fields/KCPQ_Pricebook_Library_External_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricebook_Library_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Pricebook Library External ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>