force-app/main/default/objects/KCPQ_Pricing_Library__c/fields/KCPQ_Sequence__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>