force-app/main/default/objects/KCPQ_Pricing_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KCPQ_Distributor_Net__c</columns>
    <columns>KCPQ_Status__c</columns>
    <columns>KCPQ_Sequence__c</columns>
    <columns>KCPQ_Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>